--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ updateSupply();
     <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
     <script type="text/javascript" src="https://unpkg.com/evm-chains/lib/index.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@portis/web3@2.0.0-beta.56/umd/index.js"></script>
-    <script src="./example.js"></script>
+    <script src="./portis.js"></script>
   
 
 
